--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "gh-trending",
 
   "scripts": {
+    "lint": "standard",
     "start": "micro"
   },
 
   "dependencies": {
     "micro": "^6.2.0"
+  },
+
+  "devDependencies": {
+    "standard": "^8.6.0"
   }
 }
